# manim-gpt

./: .gitignore  database.py  embedding.py  local.py  main.py  pyproject.toml  readme.md
Knowledge/Examples/: AdvancedProjects.yaml  Animations.yaml  PlottingWithManim.yaml
Knowledge/tutorials/: install-windows.yaml  install.yaml  output.yaml
embedding/: embedding_3_large.yaml
knowledge/examples/: BasicConcepts.yaml  SpecialCameraSettings.yaml
knowledge/faq/: general.yaml
knowledge/guides/: configuration.yaml  first-class.yaml  mobject.yaml  voiceovers.yaml
knowledge/mamba/: manba.yaml
knowledge/tutorials/: index.yaml  install-windows.yaml  install.yaml  quickstart.yaml
